@@ -1,6 +1,10 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.95 2004/10/15 02:48:20 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.96 2004/10/15 02:54:16 zhen Exp $
+
+  14 Oct 2004; <zhen@gentoo.org> livecd/runscript/x86-archscript.sh:
+  acpi=off changed to acpi=ht. enables HT automatically for intel users, but
+  should not hurt non-HT users
 
   12 Oct 2004; John Davis <zhen@gentoo.org>
   targets/embedded/cramfs-runscript.sh, targets/embedded/embedded-chroot.sh,
